--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@formkit/tempo": "^0.1.1",
+    "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.4.1",
     "firebase": "^10.12.2",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.16.0",
@@ -21,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
