--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@formkit/tempo": "^0.1.1",
     "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.4.1",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
